--- a/packages/bridge-rpc/project.omni.yaml
+++ b/packages/bridge-rpc/project.omni.yaml
@@ -2,21 +2,14 @@
 name: "@omni-oss/bridge-rpc"
 
 extends:
-  - "@workspace/omni/presets/ts-lib.omni.yaml"
+  - "@workspace/omni/presets/ts-vite-lib.omni.yaml"
 
 tasks:
   build:
-    command: bun x vite build
+    enabled: true
 
   test:unit:
-    command: bun x vitest --config ./vitest.config.unit.ts run
+    enabled: true
 
   test:integration:
-    command: bun x vitest --config ./vitest.config.integration.ts run
-    dependencies:
-      - test:unit
-
-  test:
-    dependencies:
-      - test:unit
-      - test:integration
+    enabled: true
