--- a/packages/async-utils/project.omni.yaml
+++ b/packages/async-utils/project.omni.yaml
@@ -2,23 +2,14 @@
 name: "@omni-oss/async-utils"
 
 extends:
-  - "@workspace/omni/presets/ts-lib.omni.yaml"
+  - "@workspace/omni/presets/ts-vite-lib.omni.yaml"
 
 tasks:
   build:
-    enabled: false
-    command: bun x vite build
+    enabled: true
 
   test:unit:
-    command: bun x vitest --config ./vitest.config.unit.ts run
+    enabled: true
 
   test:integration:
     enabled: false
-    command: bun x vitest --config ./vitest.config.integration.ts run
-    dependencies:
-      - test:unit
-
-  test:
-    dependencies:
-      - test:unit
-      
