--- a/packages/biome-config/package.json
+++ b/packages/biome-config/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@omni-oss/biome-config",
-    "version": "0.0.0-semantically-released",
+    "version": "0.0.0",
     "description": "",
     "keywords": [],
     "author": "",
