--- a/packages/vitest-config/package.json
+++ b/packages/vitest-config/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@omni-oss/vitest-config",
     "type": "module",
-    "version": "0.0.0-semantically-released",
+    "version": "0.0.0",
     "exports": {
         "./*": {
             "import": "./src/*.ts",
