--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@biomejs/biome": "^2.3.12",
         "@omni-oss/apply-version": "workspace:*",
         "@omni-oss/summarize-results": "workspace:*",
+        "@microsoft/api-extractor": "^7.55.2",
         "vite": "^7.3.1",
         "vitest": "^4.0.18",
         "typescript": "^5.9.3"
