--- a/packages/async-utils/tsconfig.types.json
+++ b/packages/async-utils/tsconfig.types.json
@@ -1,9 +1,3 @@
 {
-    "extends": ["./tsconfig.json"],
-    "compilerOptions": {
-        "declarationDir": "./dist/types",
-        "declarationMap": true,
-        "declaration": true,
-        "emitDeclarationOnly": true
-    }
+    "extends": ["@omni-oss/tsconfig/with-paths.json", "./tsconfig.project.json"]
 }
