--- a/packages/channels/tsconfig.json
+++ b/packages/channels/tsconfig.json
@@ -1,6 +1,3 @@
 {
-	"extends": ["@omni-oss/tsconfig/with-paths.json"],
-	"compilerOptions": {
-		"outDir": "./dist",
-	}
+	"extends": ["@omni-oss/tsconfig/with-paths.json", "./tsconfig.project.json"],
 }
