chore: update ts-package generator and omni presets

--- a/omni/presets/ts-lib.omni.yaml
+++ b/omni/presets/ts-lib.omni.yaml
@@ -4,5 +4,12 @@ name: ts-lib
 extends:
   - "./ts.omni.yaml"
 
+tasks:
+  publish:
+    command: bun publish
+    dependencies:
+      - build
+
 meta:
   type: lib
+  publish: true
