ci: update @actions/core version

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "scripts/*",
         "apps/*",
         "services/*",
-        "tests/*"
+        "tests/*",
+        ".github/actions/*"
     ]
 }
