chore: update tsconfig.types.json

--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "exports": {
         "./base.json": "./base.json",
-        "./with-paths.json": "./with-paths.json"
+        "./with-paths.json": "./with-paths.json",
+        "./types.json": "./types.json"
     },
     "keywords": [],
     "author": "",
