--- a/packages/system-interface/tsconfig.types.json
+++ b/packages/system-interface/tsconfig.types.json
@@ -1,3 +1,3 @@
 {
-    "extends": ["@omni-oss/tsconfig/with-paths.json", "./tsconfig.project.json"]
+    "extends": ["@omni-oss/tsconfig/types.json", "./tsconfig.project.json"]
 }
