--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@omni-oss/tsconfig": "workspace:*",
         "@biomejs/biome": "^2.3.12",
         "@omni-oss/summarize-results": "workspace:*",
+        "@omni-oss/set-version": "workspace:*",
         "@microsoft/api-extractor": "^7.55.2",
         "vite": "^7.3.1",
         "vitest": "^4.0.18",
