--- a/scripts/set-version/package.json
+++ b/scripts/set-version/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@omni-oss/set-version",
     "description": "Sets version of various package manifests",
-    "version": "0.0.0-semantically-released",
+    "version": "0.0.0",
     "bin": "./dist/cli.mjs",
     "exports": {
         ".": {
@@ -19,7 +19,13 @@
     "dependencies": {
         "zod": "^4.3.6",
         "commander": "^14.0.2",
-        "@commander-js/extra-typings": "14.0.0"
+        "@commander-js/extra-typings": "14.0.0",
+        "@omni-oss/system-interface": "workspace:*",
+        "fast-xml-parser": "^5.3.3",
+        "yaml": "^2.8.2",
+        "comment-json": "^4.5.1",
+        "smol-toml": "^1.6.0",
+        "picomatch": "^4.0.3"
     },
     "devDependencies": {
         "@omni-oss/tsconfig": "workspace:*",
@@ -29,6 +35,7 @@
         "vitest": "^4.0.8",
         "@types/node": "24.10.1",
         "@types/bun": "^1.3.6",
+        "@types/picomatch": "^4.0.2",
         "typescript": "^5.9.3"
     }
 }
