--- a/crates/omni_cli_core/Cargo.toml
+++ b/crates/omni_cli_core/Cargo.toml
@@ -15,6 +15,10 @@ enable-tracing = [
     "dep:tracing-subscriber",
     "dep:tracing-futures",
 ]
+vendored-openssl = [
+    "omni_cache/vendored-openssl",
+    "omni_execution_plan/vendored-openssl",
+]
 
 [dependencies]
 eyre = { workspace = true }
