--- a/crates/omni_task_executor/Cargo.toml
+++ b/crates/omni_task_executor/Cargo.toml
@@ -8,6 +8,11 @@ repository.workspace = true
 [features]
 default = ["enable-tracing"]
 enable-tracing = ["trace/enabled"]
+vendored-openssl = [
+    "omni_cache/vendored-openssl",
+    "omni_context/vendored-openssl"
+    "omni_execution_plan/vendored-openssl",
+]
 
 [dependencies]
 eyre = { workspace = true }
