--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,27 +19,27 @@ authors = ["Clarence Manuel <rencedm112@gmail.com>"]
 
 [workspace.dependencies]
 serde = { version = "^1.0.228", features = ["derive", "rc", "alloc"] }
-sys_traits = { version = "^0.1.18", features = ["real"] }
+sys_traits = { version = "^0.1.22", features = ["real"] }
 system_traits = { path = "./crates/system_traits" }
 async-trait = { version = "^0.1.89" }
-serde_json = { version = "^1.0.145" }
+serde_json = { version = "^1.0.149" }
 serde_bytes = { version = "^0.11.19" }
 trace = { path = "./crates/trace" }
-tracing = { version = "^0.1.41" }
-tracing-core = { version = "^0.1.34" }
+tracing = { version = "^0.1.44" }
+tracing-core = { version = "^0.1.36" }
 tracing-subscriber = { version = "=0.3.19", features = ["json"] } # Pin to 0.3.19 to avoid https://github.com/tokio-rs/tracing/issues/3369
 tracing-serde = { version = "^0.2.0" }
-test-log = { version = "^0.2.18", default-features = false, features = ["trace"] }
+test-log = { version = "=0.2.18", default-features = false, features = ["trace"] }
 futures = { version = "^0.3.31" }
-thiserror = "^2.0.17"
+thiserror = "^2.0.18"
 eyre = "^0.6.12"
 color-eyre = "^0.6.5"
-time = { version = "^0.3.44", features = ["serde", "serde-human-readable"] }
-derive_more = { version = "^2.0.1", features = ["full"] }
+time = { version = "^0.3.46", features = ["serde", "serde-human-readable"] }
+derive_more = { version = "^2.1.1", features = ["full"] }
 derive-new = { version = "^0.7.0" }
 strum = { version = "^0.27.2", features = ["derive"] }
 merge = { version = "0.2.0" }
-tokio = { version = "^1.48.0", features = [
+tokio = { version = "^1.49.0", features = [
     "rt",
     "rt-multi-thread",
     "tracing",
@@ -53,84 +53,84 @@ tokio = { version = "^1.48.0", features = [
     "io-std",
     "io-util",
 ] }
-tokio-stream = { version = "^0.1.17", features = ["full"] }
-tokio-util = { version = "^0.7.16", features = ["compat"] }
+tokio-stream = { version = "^0.1.18", features = ["full"] }
+tokio-util = { version = "^0.7.18", features = ["compat"] }
 rayon = { version = "^1.11.0" }
-reqwest = { version = "^0.12.24", features = [
+reqwest = { version = "^0.13.1", features = [
     "charset",
     "blocking",
-    "rustls-tls",
+    "rustls",
     "http2",
     "json",
 ], default-features = false }
 # deno_core = { version = "^0.351.0" }
 # deno_core = { version = "^0.352.0" }
-http = { version = "^1.3.1" }
+http = { version = "^1.4.0" }
 http-body = { version = "^1.0.1" }
 http-body-util = { version = "^0.1.3" }
 percent-encoding = { version = "^2.3.2" }
-clap = { version = "^4.5.49", features = ["derive", "env", "string"] }
-clap_complete = { version = "^4.5.59" }
+clap = { version = "^4.5.56", features = ["derive", "env", "string"] }
+clap_complete = { version = "^4.5.65" }
 globset = { version = "^0.4" }
-shadow-rs = { version = "^1.4.0", default-features = false }
-convert_case = { version = "^0.8.0" }
-schemars = { version = "^1.1.0", features = ["indexmap2", "either1"] }
+shadow-rs = { version = "^1.7.0", default-features = false }
+convert_case = { version = "^0.10.0" }
+schemars = { version = "^1.2.0", features = ["indexmap2", "either1"] }
 walkdir = { version = "^2.5.0" }
 serde_norway = { version = "^0.9.42" }
-ignore = { version = "^0.4.24" }
+ignore = { version = "^0.4.25" }
 regex = { version = "^1.12.2" }
-lazy-regex = { version = "^3.4.1" }
+lazy-regex = { version = "^3.5.1" }
 env = { path = "./crates/env" }
 env_loader = { path = "./crates/env_loader" }
 petgraph = { version = "^0.8.3", features = ["serde-1", "rayon"] }
 omni_core = { path = "./crates/omni_core" }
 config_utils = { path = "./crates/config_utils" }
 js_runtime = { path = "./crates/js_runtime" }
-toml = { version = "^0.9.8" }
-uuid = { version = "^1.18.1", features = ["v4", "v7", "serde"] }
-url = { version = "^2.5.7", features = ["serde"] }
+toml = { version = "^0.9.11" }
+uuid = { version = "^1.20.0", features = ["v4", "v7", "serde"] }
+url = { version = "^2.5.8", features = ["serde"] }
 parking_lot = { version = "^0.12.5" }
-bincode = { version = "^2.0.1", features = ["serde"] }
+bincode = { version = "=2.0.1", features = ["serde"] } # pin to this version since 3.0.0 is unmaintained, until alternatives are found
 notify = { version = "^8.2.0" }
 dir_walker = { path = "./crates/dir_walker" }
 which = { version = "^8.0.0" }
-tera = { version = "1.20.0" }
+tera = { version = "1.20.1" }
 omni_types = { path = "./crates/omni_types" }
-rmp-serde = { version = "^1.3.0" }
-rmpv = { version = "^1.3.0", features = ["with-serde"] }
+rmp-serde = { version = "^1.3.1" }
+rmpv = { version = "^1.3.1", features = ["with-serde"] }
 defer = { version = "^0.2.1" }
-mockall = { version = "^0.13.1" }
-ntest = { version = "^0.9.3" }
-bytes = { version = "^1.10.1" }
+mockall = { version = "^0.14.0" }
+ntest = { version = "^0.9.5" }
+bytes = { version = "^1.11.0" }
 byteorder = { version = "^1.5.0" }
-rust-embed = { version = "8.7.2", features = ["compression", "include-exclude", "deterministic-timestamps"] }
-garde = { version = "^0.22.0", features = ["full"] }
+rust-embed = { version = "8.11.0", features = ["compression", "include-exclude", "deterministic-timestamps"] }
+garde = { version = "^0.22.1", features = ["full"] }
 os_pipe = { version = "^1.2.3" }
-indexmap = { version = "^2.12.0", features = ["serde", "rayon"] }
+indexmap = { version = "^2.13.0", features = ["serde", "rayon"] }
 dashmap = { version = "^6.1.0", features = ["serde", "rayon"] }
 ahash = { version = "^0.8.12" }
 maps = { path = "./crates/maps" }
 sets = { path = "./crates/sets" }
-criterion = { version = "^0.7.0", features = ["html_reports", "async_tokio"] }
+criterion = { version = "^0.8.1", features = ["html_reports", "async_tokio"] }
 dhat = { version = "^0.3.3" }
 enum-map = { version = "^2.7.3" }
 portable-pty = { version = "^0.9.0" }
 terminal_size = { version = "^0.4.3" }
-rmcp = { version = "^0.8.1", features = ["server", "macros"] }
+rmcp = { version = "^0.14.0", features = ["server", "macros"] }
 rs_merkle = { version = "^1.5.0" }
 omni_cache = { path = "./crates/omni_cache" }
 omni_hasher = { path = "./crates/omni_hasher" }
 derive_builder = { version = "^0.20.2" }
-blake3 = { version = "^1.8.2" }
+blake3 = { version = "^1.8.3" }
 faster-hex = { version = "^0.10.0" }
-tempfile = { version = "^3.23.0" }
+tempfile = { version = "^3.24.0" }
 bs58 = { version = "^0.5.1" }
-yoke = { version = "^0.8.0", features = ["derive"] }
+yoke = { version = "^0.8.1", features = ["derive"] }
 owo-colors = { version = "^4.2.3" }
 tiny-gradient = { version = "^0.1.0" }
 omni_expressions = { path = "./crates/omni_expressions" }
 omni_cli_core = { path = "./crates/omni_cli_core" }
-cel = { version = "^0.11.5", features = ["json", "regex"] }
+cel = { version = "^0.12.0", features = ["json", "regex"] }
 omni_test_utils = { path = "./crates/omni_test_utils" }
 crossbeam-channel = { version = "^0.5.15" }
 shlex = { version = "^1.3.0" }
@@ -149,12 +149,12 @@ pathdiff = { version = "^0.2.3" }
 path-slash = { version = "^0.2.1" }
 atty = { version = "^0.2.14" }
 omni_process = { path = "./crates/omni_process" }
-nix = { version = "^0.30.1" }
+nix = { version = "^0.31.1" }
 base64 = { version = "^0.22.1" }
 clap_declspec = { path = "./crates/clap_declspec" }
 getset = { version = "^0.1.6" }
 either = { version = "^1.15.0", features = ["serde"] }
-ratatui = { version = "^0.29.0" }
+ratatui = { version = "^0.30.0" }
 crossterm = { version = "^0.29.0" }
 omni_term_ui = { path = "./crates/omni_term_ui" }
 clap_utils = { path = "./crates/clap_utils" }
@@ -162,7 +162,7 @@ vte = { version = "^0.15.0" }
 unicode-width = "=0.2.0" # hard requirement for ratatui
 enumflags2 = { version = "^0.7.12" }
 omni_tracing_subscriber = { path = "./crates/omni_tracing_subscriber" }
-bytesize = { version = "^2.1.0", features = ["serde"] }
+bytesize = { version = "^2.3.1", features = ["serde"] }
 humantime = { version = "^2.3.0" }
 humantime-serde = { version = "^1.1.1" }
 itertools = { version = "^0.14.0" }
@@ -181,25 +181,25 @@ omni_configuration_discovery = { path = "./crates/omni_configuration_discovery" 
 omni_discovery = { path = "./crates/omni_discovery" }
 omni_discovery_utils = { path = "./crates/omni_discovery_utils" }
 omni_tera = { path = "./crates/omni_tera" }
-axum = { version = "^0.8.6", features = ["macros", "http2", "multipart"] }
-tower = { version = "^0.5.2" }
-tower-http = { version = "^0.6.6", features = ["trace", "catch-panic"] }
+axum = { version = "^0.8.8", features = ["macros", "http2", "multipart"] }
+tower = { version = "^0.5.3" }
+tower-http = { version = "^0.6.8", features = ["trace", "catch-panic"] }
 axum-valid = { version = "^0.24.0", default-features = false, features = ["full_garde"] }
-axum-extra = { version = "^0.10.3", features = [
-    "async-stream",
+axum-extra = { version = "^0.12.5", features = [
+    "async-read-body",
     "typed-header",
     "typed-routing",
     "form",
     "file-stream",
     "error-response"
 ] }
-axum-test = { version = "^18.1.0", features = ["all"] }
+axum-test = { version = "^18.7.0", features = ["all"] }
 validator = { version = "^0.20.0" }
-aws-config = { version = "^1.8.8" }
-aws-sdk-s3 = { version = "^1.108.0" }
-aws-credential-types = { version = "^1.2.8" }
-aws-types = { version = "^1.3.9" }
-lru = { version = "^0.16.2" }
+aws-config = { version = "^1.8.12" }
+aws-sdk-s3 = { version = "^1.121.0" }
+aws-credential-types = { version = "^1.2.11" }
+aws-types = { version = "^1.3.11" }
+lru = { version = "^0.16.3" }
 utoipa = { version = "^5.4.0", features = [
     "indexmap",
     "url",
@@ -214,15 +214,15 @@ utoipa = { version = "^5.4.0", features = [
 utoipa-scalar = { version = "^0.3.0", features = ["axum"] }
 omni_path_utils = { path = "./crates/omni_path_utils" }
 async-stream = { version = "^0.3.6" }
-flate2 = { version = "^1.1.4", features = ["zlib-rs"], default-features = false }
+flate2 = { version = "^1.1.8", features = ["zlib-rs"], default-features = false }
 tar = { version = "^0.4.44" }
 keyring = { version = "^3.6.3", features = ["apple-native", "linux-native", "windows-native"] }
-machine-uid = { version = "^0.5.3" }
+machine-uid = { version = "^0.5.4" }
 rand = { version = "^0.9.2" }
 ring = { version = "^0.17.14" }
-git2 = { version = "^0.20.2" }
-requestty = { version = "^0.6.1", features = ["crossterm", "smallvec", "macros"] }
-value-bag = { version = "^1.11.1", features = ["serde", "error", "seq", "owned"] }
+git2 = { version = "^0.20.3" }
+requestty = { version = "^0.6.3", features = ["crossterm", "smallvec", "macros"] }
+value-bag = { version = "^1.12.0", features = ["serde", "error", "seq", "owned"] }
 serde_validate = { path = "./crates/serde_validate" }
 serde_repr = { version = "^0.1.20" }
 heck = { version = "^0.5.0" }
