--- a/crates/omni_cache/Cargo.toml
+++ b/crates/omni_cache/Cargo.toml
@@ -8,6 +8,7 @@ repository.workspace = true
 [features]
 default = ["enable-tracing"]
 enable-tracing = ["trace/enabled"]
+vendored-openssl = ["omni_execution_plan/vendored-openssl"]
 
 [dependencies]
 mockall = { workspace = true }
