--- a/.github/workflows/manual-release-omni.yaml
+++ b/.github/workflows/manual-release-omni.yaml
@@ -75,7 +75,8 @@ jobs:
           install-all: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install Rust Target
+      - if: "{{ matrix.target != 'aarch64-unknown-linux-gnu' }}"
+        name: Install Rust Target
         run: rustup target add ${{ matrix.target }}
 
       - name: Install Cross (Linux ARM64 target only)
@@ -85,7 +86,7 @@ jobs:
       - name: Build Projects
         run: |
           if [[ "${{ matrix.target }}" == "aarch64-unknown-linux-gnu" ]]; then
-            cross build --release -p omni --target ${{ matrix.target }}
+            cross build --release -p omni --target ${{ matrix.target }} --features vendored-openssl
           else
             cargo build --release -p omni --target ${{ matrix.target }}
           fi
