--- a/.github/workflows/manual-release-omni.yaml
+++ b/.github/workflows/manual-release-omni.yaml
@@ -75,7 +75,7 @@ jobs:
           install-all: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - if: "{{ matrix.target != 'aarch64-unknown-linux-gnu' }}"
+      - if: matrix.target != 'aarch64-unknown-linux-gnu'
         name: Install Rust Target
         run: rustup target add ${{ matrix.target }}
 
