chore: update workflows [skip ci]

--- a/.github/workflows/manual-release-omni.yaml
+++ b/.github/workflows/manual-release-omni.yaml
@@ -116,7 +116,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           path: ./artifacts
-          pattern: "*-binary"
+          pattern: "omni-*"
           merge-multiple: true
 
       - name: Create GitHub Release
