--- a/.github/workflows/manual-release-omni.yaml
+++ b/.github/workflows/manual-release-omni.yaml
@@ -79,9 +79,11 @@ jobs:
         name: Install Rust Target
         run: rustup target add ${{ matrix.target }}
 
-      - name: Install Cross (Linux ARM64 target only)
-        if: matrix.target == 'aarch64-unknown-linux-gnu'
-        run: cargo install cross --git https://github.com/cross-rs/cross
+      - if: matrix.target == 'aarch64-unknown-linux-gnu'
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cross
+          fallback: none
 
       - name: Build Projects
         run: |
@@ -123,7 +125,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           tag_name: omni-${{ inputs.version }}
-          files: ./*.zip
+          files: ./artifacts/*
           make_latest: true
           generate_release_notes: true
           token: ${{ secrets.GITHUB_TOKEN }}
