--- a/crates/omni_cli_core/Cargo.toml
+++ b/crates/omni_cli_core/Cargo.toml
@@ -2,9 +2,9 @@
 name = "omni_cli_core"
 rust-version.workspace = true
 edition.workspace = true
-version.workspace = true
 authors.workspace = true
 repository.workspace = true
+version = "0.0.0"
 
 [features]
 default = ["enable-tracing"]
