--- a/crates/bridge_rpc_router/Cargo.toml
+++ b/crates/bridge_rpc_router/Cargo.toml
@@ -2,7 +2,7 @@
 name = "bridge_rpc_router"
 rust-version.workspace = true
 edition.workspace = true
-version.workspace = true
+version = "0.0.0"
 authors.workspace = true
 repository.workspace = true
 
