--- a/crates/config_utils/Cargo.toml
+++ b/crates/config_utils/Cargo.toml
@@ -2,7 +2,7 @@
 name = "config_utils"
 rust-version.workspace = true
 edition.workspace = true
-version.workspace = true
+version = "0.0.0"
 repository.workspace = true
 
 [features]
