--- a/crates/dir_walker/Cargo.toml
+++ b/crates/dir_walker/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "dir_walker"
 edition.workspace = true
-version.workspace = true
+version = "0.0.0"
 rust-version.workspace = true
 license.workspace = true
 authors.workspace = true
