--- a/crates/js_runtime/Cargo.toml
+++ b/crates/js_runtime/Cargo.toml
@@ -4,6 +4,7 @@ authors.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 repository.workspace = true
+version = "0.0.0"
 
 [lib]
 path = "src/lib.rs"
