--- a/crates/omni_configurations/Cargo.toml
+++ b/crates/omni_configurations/Cargo.toml
@@ -2,8 +2,8 @@
 name = "omni_configurations"
 rust-version.workspace = true
 edition.workspace = true
-version.workspace = true
 repository.workspace = true
+version = "0.0.0"
 
 [features]
 default = ["enable-tracing"]
