--- a/crates/omni_file_data_serde/Cargo.toml
+++ b/crates/omni_file_data_serde/Cargo.toml
@@ -2,7 +2,7 @@
 name = "omni_file_data_serde"
 rust-version.workspace = true
 edition.workspace = true
-version.workspace = true
+version = "0.0.0"
 authors.workspace = true
 repository.workspace = true
 
