--- a/crates/system_traits/Cargo.toml
+++ b/crates/system_traits/Cargo.toml
@@ -4,6 +4,7 @@ authors.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 repository.workspace = true
+version = "0.0.0"
 
 [features]
 default = ["sync", "async"]
