--- a/crates/trace/Cargo.toml
+++ b/crates/trace/Cargo.toml
@@ -2,7 +2,7 @@
 name = "trace"
 rust-version.workspace = true
 edition.workspace = true
-version.workspace = true
+version = "0.0.0"
 repository.workspace = true
 
 [features]
