--- a/.github/workflows/check-pr-message.yaml
+++ b/.github/workflows/check-pr-message.yaml
@@ -1,6 +1,10 @@
-name: Check PR message
+name: Check PR Message
 
-on: [push]
+on:
+  push:
+    tags-ignore:
+      - "v*.*.*"
+      - "*-v*.*.*"
 
 jobs:
   cog_check_job:
