feat: support if expressions for task condition

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -143,6 +143,7 @@ omni_configurations = { path = "./crates/omni_configurations" }
 omni_context = { path = "./crates/omni_context" }
 omni_task_executor = { path = "./crates/omni_task_executor" }
 bridge_rpc_router = { path = "crates/bridge_rpc_router" }
+omni_config_types = { path = "crates/omni_config_types" }
 # @anchor:new-crate
 tracing-futures = { version = "^0.2.5", features = ["tokio"] }
 pathdiff = { version = "^0.2.3" }
