--- a/crates/omni_configurations/Cargo.toml
+++ b/crates/omni_configurations/Cargo.toml
@@ -35,3 +35,4 @@ system_traits = { workspace = true }
 lazy-regex = { workspace = true }
 humantime = { workspace = true }
 humantime-serde = { workspace = true }
+omni_config_types = { workspace = true }
