--- a/crates/omni_execution_plan/Cargo.toml
+++ b/crates/omni_execution_plan/Cargo.toml
@@ -30,3 +30,4 @@ bs58 = { workspace = true }
 omni_scm = { workspace = true }
 omni_types = { workspace = true }
 path-clean = { workspace = true }
+omni_config_types = { workspace = true }
