--- a/crates/omni_core/Cargo.toml
+++ b/crates/omni_core/Cargo.toml
@@ -23,3 +23,4 @@ derive-new = { workspace = true }
 maps = { workspace = true }
 merge = { workspace = true }
 sets = { workspace = true }
+omni_config_types = { workspace = true }
