feat: support tera template in task command

--- a/crates/omni_configurations/Cargo.toml
+++ b/crates/omni_configurations/Cargo.toml
@@ -36,3 +36,5 @@ lazy-regex = { workspace = true }
 humantime = { workspace = true }
 humantime-serde = { workspace = true }
 omni_config_types = { workspace = true }
+serde_validate = { workspace = true }
+omni_serde_validators = { workspace = true }
