--- a/crates/omni_task_context/Cargo.toml
+++ b/crates/omni_task_context/Cargo.toml
@@ -23,3 +23,4 @@ maps = { workspace = true }
 omni_core = { workspace = true }
 omni_types = { workspace = true }
 omni_hasher = { workspace = true }
+omni_tera = { workspace = true }
